# ChangeLog for calc-extension:

*calc-extension-4.0:
	Martin Väth <martin at mvath.de>:
	- New layout of pagehead: Hide details first
	- Buttons for editing (clean, remove, move or insert line, redraw)
	- Buttons for all operators, variables, constants, numbers, etc
	- Display current value of #
	- Alternative symbols for sqrt and cbrt: √ and ∛
	- Attempt to keep result scrolled in
	- Button to restore session
	- Internal: clean line organization
	- Internal: avoid redundant array variables
	- Bugfix: default options propagation when cleaning storage
	- Bugfix: resetting to default width works now in non-button mode

*calc-extension-3.0:
	Martin Väth <martin at mvath.de>:
	- Extend syntax (easy game with the Pratt parser!):
	- Multiplication symbol can be omitted now
	- Function calls do not require braces () now
	- Alternative symbols for *, ** and / (namely × or ·, ↑ and :)
	- Alternative symbols for PI and EPSILON: π and ε
	- Fix token lexing bug which could give confusing error messages
	- Icon has full width now

*calc-extension-2.1:
	Martin Väth <martin at mvath.de>:
	- Bugfix: EPSILON and log now work (again)

*calc-extension-2.0:
	Martin Väth <martin at mvath.de>:
	- Add new functions:
	  log10 log2 log1p expm1 cosh sinh tanh acosh asinh atanh
	  cbrt trunc sign fround clz32
	- Add new constant EPSILON
	- Add buttons to store session locally (and to add such a storage)
	- Copy result automatically to the clipboard
	- Add button to copy the whole session to the clipboard
	- Add button to clear the window
	- Make input field width and output base part of options
	- Add local options in page head
	- Introduce buttons to clear storage and to clear a stored session
	- An empty result now removes the current line
	- Add new inline tokens ! and ? to set/unset non-button mode
	- Let enter key work also with unchanged input fields (non-button mode)
	- Output optical separator in non-button mode
	- Fix activation of next input in non-button mode, see