@@ -246,8 +246,9 @@
       <table><tr id="rowBase"></tr></table>
     </details>
     <details>
-      <summary id="announceSession"></summary>
+      <summary id="announceStorage"></summary>
       <table><tr id="rowSession"></tr></table>
+      <table><tr id="rowStorage"></tr></table>
     </details>
     <details>
       <summary id="announceEditing"></summary>
