@@ -5,6 +5,7 @@
 	- New layout of pagehead: Hide details first
 	- Buttons for editing (clean, remove, move or insert line, redraw)
 	- Buttons for all operators, variables, constants, numbers, etc
+	- Buttons to store options and clean storage also in main window
 	- Display current value of #
 	- Alternative symbols for sqrt and cbrt: √ and ∛
 	- Attempt to keep result scrolled in
